[package]
name = "darekagakaku"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ["d1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
js-sys = "0.3"
chrono-tz = "0.10"
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
